engine/scripting/native_api/dse_api.h

// ============================================================
// Context Setup — 引擎初始化时调用一次
// ============================================================

DSE_CAPI void dse_native_api_init(
    void* world,           // World*
    void* asset_manager,   // AssetManager*
    void* audio_system,    // AudioSystem* (可为 nullptr)
    void  (*quit_fn)(void),
    void  (*set_title_fn)(const char*),
    float (*get_fps_fn)(void),
    void  (*set_fps_fn)(float),
    int   (*get_draw_calls_fn)(void)   // 可为 nullptr
);
// ============================================================
// Camera3DComponent
// ============================================================

DSE_CAPI void  dse_camera3d_add(uint32_t e, float fov, float near_clip, float far_clip);
// ============================================================
// MeshRendererComponent
// ============================================================

DSE_CAPI void  dse_mesh_renderer_add(uint32_t e, const char* mesh_path);
// 手写 setter（capi_setter:manual）：设 mesh_path 并清空过程网格缓存；getter 由 codegen 生成
DSE_CAPI void  dse_mesh_renderer_set_mesh_path(uint32_t e, const char* mesh_path);
// ============================================================
// DirectionalLight3DComponent
// ============================================================

DSE_CAPI void  dse_dir_light_add(uint32_t e);
// S1.8 Tier C：复合阴影参数 setter，封装 cascade 级联约束（split[i] ≥ split[i-1]+0.1）+ clamp；
//             手写实现见 dse_api.cpp（非 codegen）。传入值由调用方合并好现值。
DSE_CAPI void  dse_dir_light_set_shadow_params(uint32_t e, int cast_shadow, float shadow_strength,
                                               float c0, float c1, float c2, float lambda);
// ============================================================
// PointLightComponent
// ============================================================

DSE_CAPI void  dse_point_light_add(uint32_t e);
// ============================================================
// SpotLightComponent
// ============================================================

DSE_CAPI void  dse_spot_light_add(uint32_t e);
// ============================================================
// SkyLightComponent
// ============================================================

DSE_CAPI void  dse_sky_light_add(uint32_t e);
// ============================================================
// Physics3D 服务（L5，手写 dse_api_physics3d.cpp）
// 依赖 Physics3D 服务 + ECS 碰撞体回退，非纯组件字段，codegen 无法表达。
// raycast：direction 内部归一化；命中返回 1 并填充非空 out_*（point/normal 为 float[3]）。
// ============================================================
DSE_CAPI int dse_physics3d_raycast(float ox, float oy, float oz,
                                   float dx, float dy, float dz,
                                   float max_dist,
                                   uint32_t* out_entity,
                                   float* out_point,
                                   float* out_normal,
                                   float* out_distance);
// RigidBody3D 动力学（服务委托 + 组件缓存回退）。
// add_force/add_impulse/add_torque/set_angular_velocity：仅在物理服务存在时生效，否则 no-op。
// set_velocity/set_gravity：委托服务（若有）并同步组件缓存。
// get_velocity：服务优先，否则回退组件缓存；get_angular_velocity：服务优先，否则 0。
DSE_CAPI void dse_rigidbody3d_add_force(uint32_t e, float fx, float fy, float fz);
DSE_CAPI void dse_rigidbody3d_add_impulse(uint32_t e, float ix, float iy, float iz);
DSE_CAPI void dse_rigidbody3d_add_torque(uint32_t e, float tx, float ty, float tz);
DSE_CAPI void dse_rigidbody3d_set_velocity(uint32_t e, float vx, float vy, float vz);
DSE_CAPI void dse_rigidbody3d_get_velocity(uint32_t e, float* out_vel);          // float[3]
DSE_CAPI void dse_rigidbody3d_set_angular_velocity(uint32_t e, float ax, float ay, float az);
DSE_CAPI void dse_rigidbody3d_get_angular_velocity(uint32_t e, float* out_vel);  // float[3]
DSE_CAPI void dse_rigidbody3d_set_gravity(uint32_t e, int enabled);
// CharacterController3D。move：服务优先（含 ECS 地形贴地补正），否则 ECS 回退
// （碰撞体推开 + 地形贴地 + 着地检测）。返回 is_grounded(0/1)，填充非空 out_velocity[3] 与 out_flags。
// jump：仅在物理服务存在时生效，返回 success(0/1)。
DSE_CAPI int dse_character_controller3d_move(uint32_t e, float dx, float dy, float dz,
                                             float min_dist, float dt,
                                             float* out_velocity, uint32_t* out_flags);
DSE_CAPI int dse_character_controller3d_jump(uint32_t e, float jump_speed);
// is_grounded/get_position：服务优先，否则 ECS 回退（组件缓存 / Transform）。
DSE_CAPI int dse_character_controller3d_is_grounded(uint32_t e);
DSE_CAPI int dse_character_controller3d_get_position(uint32_t e, float* out_xyz); // float[3]，返回 found(0/1)
// 组件创建（L3，ECS emplace_or_replace）。type/direction 为对应枚举的整型值。
DSE_CAPI void dse_rigidbody3d_add(uint32_t e, int type, float mass);
DSE_CAPI void dse_box_collider3d_add(uint32_t e, float x, float y, float z);
DSE_CAPI void dse_sphere_collider3d_add(uint32_t e, float radius);
DSE_CAPI void dse_capsule_collider3d_add(uint32_t e, float radius, float height,
                                         int direction, int is_trigger);
DSE_CAPI void dse_mesh_collider3d_add(uint32_t e, int convex, int is_trigger);
DSE_CAPI void dse_character_controller3d_add(uint32_t e, float radius, float height,
                                             float slope_limit, float step_offset);
DSE_CAPI void dse_joint3d_add(uint32_t e, uint32_t connected_id, int type,
                              float ax, float ay, float az,
                              float bx, float by, float bz,
                              float break_force, float break_torque);
DSE_CAPI void dse_terrain_heightmap_add(uint32_t e, float origin_x, float origin_z,
                                        float block_size, int cols, int rows,
                                        float scale, int flip_z);
// TerrainHeightmap 数据写入 / 查询。
DSE_CAPI void dse_terrain_heightmap_set_data(uint32_t e, const float* heights, int count);
DSE_CAPI int dse_terrain_get_height(float world_x, float world_z, float* out_y); // 返回 found(0/1)
// Joint3D 附加参数 setter / 查询。
DSE_CAPI void dse_joint3d_set_hinge_limits(uint32_t e, float lower_deg, float upper_deg);
DSE_CAPI void dse_joint3d_set_spring(uint32_t e, float stiffness, float damping);
DSE_CAPI void dse_joint3d_set_distance(uint32_t e, float min_dist, float max_dist);
DSE_CAPI int dse_joint3d_is_broken(uint32_t e);
// 碰撞层 / trigger / 材质。set_layer 写 RigidBody 并委托物理服务（若有）。
// set_trigger/set_material 写入实体上存在的任意碰撞体类型（Box/Sphere/Capsule/Mesh）。
DSE_CAPI void dse_collision_set_layer(uint32_t e, int layer, int mask);
DSE_CAPI void dse_collider_set_trigger(uint32_t e, int is_trigger);
DSE_CAPI void dse_collider_set_material(uint32_t e, float friction, float bounciness);
// 重叠查询：写入命中实体 id 到 out（容量 cap），返回命中总数（可能 > cap）。
DSE_CAPI int dse_physics3d_overlap_sphere(float cx, float cy, float cz, float radius,
                                          uint32_t* out, int cap);
DSE_CAPI int dse_physics3d_overlap_box(float min_x, float min_y, float min_z,
                                       float max_x, float max_y, float max_z,
                                       uint32_t* out, int cap);
// ============================================================
// Render 服务（L5，手写 dse_api_render.cpp）
// ============================================================
// world_to_screen：把 3D 世界坐标投影到屏幕像素，填充非空 out_sx/out_sy，返回 is_visible(0/1)。
DSE_CAPI int dse_render_world_to_screen(float wx, float wy, float wz,
                                        float* out_sx, float* out_sy);
// screen_to_world_ray：由屏幕像素 (sx,sy) 用主相机反投影出世界空间拾取射线。
// 填充非空 out_origin[3]（射线起点=相机位置）与 out_dir[3]（已归一化方向）。
// 成功（存在启用的主相机）返回 1，否则返回 0 且不修改输出。
DSE_CAPI int dse_render_screen_to_world_ray(float sx, float sy,
                                            float* out_origin, float* out_dir);
// MeshRenderer 材质/贴图加载（依赖 AssetManager）。
// set_material_from_dmat：从 .dmat 载入 MaterialInstance 并拷入 MeshRenderer，成功返回 1。
// set_texture：按 slot 名载入贴图并绑定到对应 handle，成功返回 1 并填充非空 out_*；slot 非法/加载失败返回 0。
DSE_CAPI int dse_mesh_renderer_set_material_from_dmat(uint32_t e, const char* dmat_path,
                                                      uint32_t material_index);
DSE_CAPI int dse_mesh_renderer_set_texture(uint32_t e, const char* slot, const char* path,
                                           uint32_t* out_handle, int* out_width, int* out_height);
// MeshRenderer 过程网格创作 + 材质创作（手写 dse_api_render.cpp）。
// add_procedural：emplace_or_replace 组件并写入过程顶点（xyz 扁平）与索引（越界索引丢弃）。
// set_material_params：浮点 NaN=保持当前值；receive_shadow/double_sided：-1=保持当前值。
// set_material_scalar：按名写标量并把材质数据源标记为 ComponentFallback；未知名仅标记。
// set_advanced_material：写高级材质参数并标记 ComponentFallback。
// set_uvs/set_normals/set_tangents：写入过程网格属性缓冲；返回属性数量与顶点数是否匹配(0/1)，
//   填充非空 out_attr_count（属性个数）与 out_vertex_count。
// set_emissive_authoring：写 emissive 并标记 ComponentFallback。
DSE_CAPI void dse_mesh_renderer_add_procedural(uint32_t e, float r, float g, float b, float a,
                                               const float* vertices, int vertex_float_count,
                                               const int* indices, int index_count);
DSE_CAPI void dse_mesh_renderer_set_material_params(uint32_t e, float metallic, float roughness,
                                                    float ao, float er, float eg, float eb,
                                                    float normal_strength,
                                                    int receive_shadow, int double_sided,
                                                    float cr, float cg, float cb, float ca);
DSE_CAPI void dse_mesh_renderer_set_depth_state(uint32_t e, int depth_test, int depth_write);
DSE_CAPI void dse_mesh_renderer_set_material_scalar(uint32_t e, const char* name, float value);
DSE_CAPI void dse_mesh_renderer_set_advanced_material(uint32_t e, float clear_coat,
                                                      float clear_coat_roughness, float anisotropy,
                                                      float pom_height_scale, float sss_strength,
                                                      float sss_r, float sss_g, float sss_b);
DSE_CAPI int  dse_mesh_renderer_set_uvs(uint32_t e, const float* uvs, int count,
                                        int* out_attr_count, int* out_vertex_count);
DSE_CAPI int  dse_mesh_renderer_set_normals(uint32_t e, const float* normals, int count,
                                            int* out_attr_count, int* out_vertex_count);
DSE_CAPI int  dse_mesh_renderer_set_tangents(uint32_t e, const float* tangents, int count,
                                             int* out_attr_count, int* out_vertex_count);
DSE_CAPI void dse_mesh_renderer_set_emissive_authoring(uint32_t e, float r, float g, float b);
// ---- Morph 简单权重组件（MorphComponent，区别于 MorphTargetComponent 的 dse_morph_*）。 ----
DSE_CAPI void  dse_morph_simple_add(uint32_t e);
DSE_CAPI void  dse_morph_simple_add_target(uint32_t e, const char* name, float weight);
DSE_CAPI void  dse_morph_simple_set_weight(uint32_t e, const char* name, float w);
// ============================================================
// Extended Context Setup — 扩展上下文（metrics 回调 + floating origin）
// ============================================================

DSE_CAPI void dse_native_api_init_ext(
    int   (*get_max_batch_sprites_fn)(void),
    int   (*get_sprite_count_fn)(void),
    int   (*get_gpu_driven_active_fn)(void),
    int   (*get_gpu_indirect_draw_count_fn)(void),
    int   (*get_gpu_total_instances_fn)(void),
    void* floating_origin);
DSE_CAPI void  dse_ai_goap_action_begin(int planner_id, const char* name, float cost);
DSE_CAPI void  dse_ai_goap_action_precondition(int planner_id, const char* key, int value);
DSE_CAPI void  dse_ai_goap_action_effect(int planner_id, const char* key, int value);
DSE_CAPI void  dse_ai_goap_action_commit(int planner_id);
DSE_CAPI void  dse_ai_goap_state_clear(int planner_id);
// which: 0=current_state 1=goal。
DSE_CAPI void  dse_ai_goap_state_set(int planner_id, int which, const char* key, int value);
// 规划：动作名以 '\n' 分隔写入 out（null 结尾，按 cap 截断）。返回 -1=无解，否则写入长度。
DSE_CAPI int   dse_ai_goap_plan(int planner_id, char* out, int cap);