GameScripts/DSEngine.Runtime/Generated/NativeManual.gen.cs


    [LibraryImport(Lib, EntryPoint = "dse_ai_goap_action_begin", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_ai_goap_action_begin(int plannerId, string name, float cost);

    [LibraryImport(Lib, EntryPoint = "dse_ai_goap_action_precondition", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_ai_goap_action_precondition(int plannerId, string key, int value);

    [LibraryImport(Lib, EntryPoint = "dse_ai_goap_action_effect", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_ai_goap_action_effect(int plannerId, string key, int value);

    [LibraryImport(Lib, EntryPoint = "dse_ai_goap_action_commit")]
    internal static partial void dse_ai_goap_action_commit(int plannerId);

    [LibraryImport(Lib, EntryPoint = "dse_ai_goap_state_clear")]
    internal static partial void dse_ai_goap_state_clear(int plannerId);

    [LibraryImport(Lib, EntryPoint = "dse_ai_goap_state_set", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_ai_goap_state_set(int plannerId, int which, string key, int value);

    [LibraryImport(Lib, EntryPoint = "dse_ai_goap_plan")]
    internal static partial int dse_ai_goap_plan(int plannerId, [Out] byte[] @out, int cap);

    [LibraryImport(Lib, EntryPoint = "dse_camera3d_add")]
    internal static partial void dse_camera3d_add(uint e, float fov, float nearClip, float farClip);

    [LibraryImport(Lib, EntryPoint = "dse_mesh_renderer_add", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_mesh_renderer_add(uint e, string meshPath);

    [LibraryImport(Lib, EntryPoint = "dse_mesh_renderer_set_mesh_path", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_mesh_renderer_set_mesh_path(uint e, string meshPath);

    [LibraryImport(Lib, EntryPoint = "dse_dir_light_add")]
    internal static partial void dse_dir_light_add(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_dir_light_set_shadow_params")]
    internal static partial void dse_dir_light_set_shadow_params(uint e, int castShadow, float shadowStrength, float c0, float c1, float c2, float lambda);

    [LibraryImport(Lib, EntryPoint = "dse_point_light_add")]
    internal static partial void dse_point_light_add(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_spot_light_add")]
    internal static partial void dse_spot_light_add(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_sky_light_add")]
    internal static partial void dse_sky_light_add(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_physics3d_raycast")]
    internal static partial int dse_physics3d_raycast(float ox, float oy, float oz, float dx, float dy, float dz, float maxDist, out uint outEntity, [Out] float[] outPoint, [Out] float[] outNormal, out float outDistance);

    [LibraryImport(Lib, EntryPoint = "dse_rigidbody3d_add_force")]
    internal static partial void dse_rigidbody3d_add_force(uint e, float fx, float fy, float fz);

    [LibraryImport(Lib, EntryPoint = "dse_rigidbody3d_add_impulse")]
    internal static partial void dse_rigidbody3d_add_impulse(uint e, float ix, float iy, float iz);

    [LibraryImport(Lib, EntryPoint = "dse_rigidbody3d_add_torque")]
    internal static partial void dse_rigidbody3d_add_torque(uint e, float tx, float ty, float tz);

    [LibraryImport(Lib, EntryPoint = "dse_rigidbody3d_set_velocity")]
    internal static partial void dse_rigidbody3d_set_velocity(uint e, float vx, float vy, float vz);

    [LibraryImport(Lib, EntryPoint = "dse_rigidbody3d_get_velocity")]
    internal static partial void dse_rigidbody3d_get_velocity(uint e, [Out] float[] outVel);

    [LibraryImport(Lib, EntryPoint = "dse_rigidbody3d_set_angular_velocity")]
    internal static partial void dse_rigidbody3d_set_angular_velocity(uint e, float ax, float ay, float az);

    [LibraryImport(Lib, EntryPoint = "dse_rigidbody3d_get_angular_velocity")]
    internal static partial void dse_rigidbody3d_get_angular_velocity(uint e, [Out] float[] outVel);

    [LibraryImport(Lib, EntryPoint = "dse_rigidbody3d_set_gravity")]
    internal static partial void dse_rigidbody3d_set_gravity(uint e, int enabled);

    [LibraryImport(Lib, EntryPoint = "dse_character_controller3d_move")]
    internal static partial int dse_character_controller3d_move(uint e, float dx, float dy, float dz, float minDist, float dt, [Out] float[] outVelocity, out uint outFlags);

    [LibraryImport(Lib, EntryPoint = "dse_character_controller3d_jump")]
    internal static partial int dse_character_controller3d_jump(uint e, float jumpSpeed);

    [LibraryImport(Lib, EntryPoint = "dse_character_controller3d_is_grounded")]
    internal static partial int dse_character_controller3d_is_grounded(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_character_controller3d_get_position")]
    internal static partial int dse_character_controller3d_get_position(uint e, [Out] float[] outXyz);

    [LibraryImport(Lib, EntryPoint = "dse_rigidbody3d_add")]
    internal static partial void dse_rigidbody3d_add(uint e, int type, float mass);

    [LibraryImport(Lib, EntryPoint = "dse_box_collider3d_add")]
    internal static partial void dse_box_collider3d_add(uint e, float x, float y, float z);

    [LibraryImport(Lib, EntryPoint = "dse_sphere_collider3d_add")]
    internal static partial void dse_sphere_collider3d_add(uint e, float radius);

    [LibraryImport(Lib, EntryPoint = "dse_capsule_collider3d_add")]
    internal static partial void dse_capsule_collider3d_add(uint e, float radius, float height, int direction, int isTrigger);

    [LibraryImport(Lib, EntryPoint = "dse_mesh_collider3d_add")]
    internal static partial void dse_mesh_collider3d_add(uint e, int convex, int isTrigger);

    [LibraryImport(Lib, EntryPoint = "dse_character_controller3d_add")]
    internal static partial void dse_character_controller3d_add(uint e, float radius, float height, float slopeLimit, float stepOffset);

    [LibraryImport(Lib, EntryPoint = "dse_joint3d_add")]
    internal static partial void dse_joint3d_add(uint e, uint connectedId, int type, float ax, float ay, float az, float bx, float by, float bz, float breakForce, float breakTorque);

    [LibraryImport(Lib, EntryPoint = "dse_terrain_heightmap_add")]
    internal static partial void dse_terrain_heightmap_add(uint e, float originX, float originZ, float blockSize, int cols, int rows, float scale, int flipZ);

    [LibraryImport(Lib, EntryPoint = "dse_terrain_heightmap_set_data")]
    internal static partial void dse_terrain_heightmap_set_data(uint e, float[] heights, int count);

    [LibraryImport(Lib, EntryPoint = "dse_terrain_get_height")]
    internal static partial int dse_terrain_get_height(float worldX, float worldZ, out float outY);

    [LibraryImport(Lib, EntryPoint = "dse_joint3d_set_hinge_limits")]
    internal static partial void dse_joint3d_set_hinge_limits(uint e, float lowerDeg, float upperDeg);

    [LibraryImport(Lib, EntryPoint = "dse_joint3d_set_spring")]
    internal static partial void dse_joint3d_set_spring(uint e, float stiffness, float damping);

    [LibraryImport(Lib, EntryPoint = "dse_joint3d_set_distance")]
    internal static partial void dse_joint3d_set_distance(uint e, float minDist, float maxDist);

    [LibraryImport(Lib, EntryPoint = "dse_joint3d_is_broken")]
    internal static partial int dse_joint3d_is_broken(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_collision_set_layer")]
    internal static partial void dse_collision_set_layer(uint e, int layer, int mask);

    [LibraryImport(Lib, EntryPoint = "dse_collider_set_trigger")]
    internal static partial void dse_collider_set_trigger(uint e, int isTrigger);

    [LibraryImport(Lib, EntryPoint = "dse_collider_set_material")]
    internal static partial void dse_collider_set_material(uint e, float friction, float bounciness);

    [LibraryImport(Lib, EntryPoint = "dse_physics3d_overlap_sphere")]
    internal static partial int dse_physics3d_overlap_sphere(float cx, float cy, float cz, float radius, [Out] uint[] @out, int cap);

    [LibraryImport(Lib, EntryPoint = "dse_physics3d_overlap_box")]
    internal static partial int dse_physics3d_overlap_box(float minX, float minY, float minZ, float maxX, float maxY, float maxZ, [Out] uint[] @out, int cap);

    [LibraryImport(Lib, EntryPoint = "dse_render_world_to_screen")]
    internal static partial int dse_render_world_to_screen(float wx, float wy, float wz, out float outSx, out float outSy);

    [LibraryImport(Lib, EntryPoint = "dse_render_screen_to_world_ray")]
    internal static partial int dse_render_screen_to_world_ray(float sx, float sy, [Out] float[] outOrigin, [Out] float[] outDir);

    [LibraryImport(Lib, EntryPoint = "dse_mesh_renderer_set_material_from_dmat", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int dse_mesh_renderer_set_material_from_dmat(uint e, string dmatPath, uint materialIndex);

    [LibraryImport(Lib, EntryPoint = "dse_mesh_renderer_set_texture", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int dse_mesh_renderer_set_texture(uint e, string slot, string path, out uint outHandle, out int outWidth, out int outHeight);

    [LibraryImport(Lib, EntryPoint = "dse_mesh_renderer_add_procedural")]
    internal static partial void dse_mesh_renderer_add_procedural(uint e, float r, float g, float b, float a, float[] vertices, int vertexFloatCount, int[] indices, int indexCount);

    [LibraryImport(Lib, EntryPoint = "dse_mesh_renderer_set_material_params")]
    internal static partial void dse_mesh_renderer_set_material_params(uint e, float metallic, float roughness, float ao, float er, float eg, float eb, float normalStrength, int receiveShadow, int doubleSided, float cr, float cg, float cb, float ca);

    [LibraryImport(Lib, EntryPoint = "dse_mesh_renderer_set_depth_state")]
    internal static partial void dse_mesh_renderer_set_depth_state(uint e, int depthTest, int depthWrite);

    [LibraryImport(Lib, EntryPoint = "dse_mesh_renderer_set_material_scalar", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_mesh_renderer_set_material_scalar(uint e, string name, float value);

    [LibraryImport(Lib, EntryPoint = "dse_mesh_renderer_set_advanced_material")]
    internal static partial void dse_mesh_renderer_set_advanced_material(uint e, float clearCoat, float clearCoatRoughness, float anisotropy, float pomHeightScale, float sssStrength, float sssR, float sssG, float sssB);

    [LibraryImport(Lib, EntryPoint = "dse_mesh_renderer_set_uvs")]
    internal static partial int dse_mesh_renderer_set_uvs(uint e, float[] uvs, int count, out int outAttrCount, out int outVertexCount);

    [LibraryImport(Lib, EntryPoint = "dse_mesh_renderer_set_normals")]
    internal static partial int dse_mesh_renderer_set_normals(uint e, float[] normals, int count, out int outAttrCount, out int outVertexCount);

    [LibraryImport(Lib, EntryPoint = "dse_mesh_renderer_set_tangents")]
    internal static partial int dse_mesh_renderer_set_tangents(uint e, float[] tangents, int count, out int outAttrCount, out int outVertexCount);

    [LibraryImport(Lib, EntryPoint = "dse_mesh_renderer_set_emissive_authoring")]
    internal static partial void dse_mesh_renderer_set_emissive_authoring(uint e, float r, float g, float b);

    [LibraryImport(Lib, EntryPoint = "dse_morph_simple_add")]
    internal static partial void dse_morph_simple_add(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_morph_simple_add_target", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_morph_simple_add_target(uint e, string name, float weight);

    [LibraryImport(Lib, EntryPoint = "dse_morph_simple_set_weight", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_morph_simple_set_weight(uint e, string name, float w);
